--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,5 @@
 [config]
-DYMOLabelLocation="C:\Users\User\Documents\sync.3000rpm\36x89.label"
+DYMOLabelLocation=C:\Users\User\Documents\Source a
+DYMOLabelName=\36x89.label
 URLToPrint="http://repairs.3000rpm.com/admin/dynamoprint.php"
-Version=3
+Version=4
