--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,2 @@
 [config]
-DYMOLabelLocation=C:\Users\User\Documents\Source a
-DYMOLabelName=\36x89.label
-URLToPrint="http://repairs.3000rpm.com/admin/dynamoprint.php"
-Version=5
+WindowToPrint="repairs.3000rpm.com/admin/dynamoprint.php - Google Chrome"
